fix Posts Collapse

--- a/source/css/_partial/page.styl
+++ b/source/css/_partial/page.styl
@@ -1,7 +1,7 @@
 /*Posts Collapse 时间轴*/
 .posts-collapse {
     position: relative;
-    z-index: 1010;
+    z-index: 100;
     margin-left: 55px;
     &::after {
         content: " ";
